--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
             - Path=/business/**
           # 加上StripPrefix=1，否则转发到后端服务时会带上business前缀
           filters:
+            # 进行token过滤
+            #- TokenAuthenticationFilter
             - StripPrefix=1
 
 # 注册中心
