--- a/common/pom.xml
+++ b/common/pom.xml
@@ -41,6 +41,19 @@
             <version>2.3.3.RELEASE</version>
         </dependency>
 
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>Finchley.SR2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
