--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>cloud02</artifactId>
+    <artifactId>cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>eureka</module>
         <module>common</module>
         <module>gateway</module>
         <module>business</module>
+        <module>rbac</module>
     </modules>
     <packaging>pom</packaging>
 
