--- a/rbac/pom.xml
+++ b/rbac/pom.xml
@@ -9,13 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>business</artifactId>
+    <groupId>cloud</groupId>
+    <artifactId>rbac</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>cloud.bizcommon</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>1.7.0</version>
         </dependency>
 
     </dependencies>
