--- a/rbac/pom.xml
+++ b/rbac/pom.xml
@@ -25,6 +25,12 @@
             <version>1.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
